--- a/index.html
+++ b/index.html
@@ -21,18 +21,17 @@
 		<div class="pomodoro">
 			<div>Duración del pomodoro</div>
 			<div class="menos"><button id="pomodoroMenos" role="button" onclick="restar(this)">-</button></div>
-			<div class="pomodoro" id="duracionPomo">1</div>
+			<div class="pomodoro" id="duracionPomo">25</div>
 			<div class="mas"><button id="pomodoroMas" role="button" onclick="sumar(this)">+</button></div>
 		</div>
 	</div>
 
-	<div class="reloj" onclick="timer()">
+	<div class="reloj" id="reloj" onclick="timer()">
 		    <div id="etapa">Session</div>
-			<div class="conteo" id="tiempoFaltante">1</div>
+			<div class="conteo" id="tiempoFaltante">25</div>
 	</div>
 </div>
 
-<script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/index.js"></script>
 
 </body>
