--- a/index.html
+++ b/index.html
@@ -1,38 +1,39 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html >
 <head>
-	<meta charset="utf-8">
-	<title>Pomodoro clock</title>
-	<link rel="stylesheet" href="css/style.css">
-</head>
+  <meta charset="UTF-8">
+  <title>PomodoroClock</title>
+  <link rel="stylesheet" href="css/style.css"/>
+  </head>
+
 <body>
-<div class="contenedor">
+  <div class="contenedor">
 	
 	<header><h1>Pomodoro</h1></header>
 	
 	<div class="configuracion">
 		<div class="descanso">
-			<div>Duración del descanso</div>
+			<h3>Duración del descanso</h3>
 			<div class="menos"><button id="descansoMenos" role="button" onclick="restar(this)">-</button></div>
-			<div id="duracionDescanso">5</div>
+			<div class="duracion" id="duracionDescanso">5</div>
 			<div class="mas"><button id="descansoMas" role="button" onclick="sumar(this)">+</button></div>
 		</div>
 	
 		<div class="pomodoro">
-			<div>Duración del pomodoro</div>
+			<h3>Duración del pomodoro</h3>
 			<div class="menos"><button id="pomodoroMenos" role="button" onclick="restar(this)">-</button></div>
-			<div class="pomodoro" id="duracionPomo">25</div>
+			<div class="duracion" id="duracionPomo">25</div>
 			<div class="mas"><button id="pomodoroMas" role="button" onclick="sumar(this)">+</button></div>
 		</div>
 	</div>
 
-	<div class="reloj" id="reloj" onclick="timer()">
+	<div id="reloj" onclick="timer()">
 		    <div id="etapa">Session</div>
 			<div class="conteo" id="tiempoFaltante">25</div>
 	</div>
 </div>
-
-<script src="js/index.js"></script>
+  
+    <script src="js/index.js"></script>
 
 </body>
 </html>
